--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "start": "nodemon todos.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
