--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
